# loc

./: .clang-format  .gitignore  .gitlab-ci.yml  GNUMakefile  LICENSE  Makefile  README.md  langs.c  loc.c  loc.h  main.c  meson.build  parse.c
src/: langs.c  loc.c  loc.h  main.c  meson.build  parse.c  results.c
